# pulumi-zitadel

./: .ci-mgmt.yaml  .gitignore  .golangci.yml  .goreleaser.yml  .upgrade-config.yml  CODEOWNERS  Makefile  README.md  package.json  pnpm-lock.yaml
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/pulumi_zitadel/: __init__.py  action.py  application_api.py  application_key.py  application_oidc.py  default_domain_policy.py  default_label_policy.py  default_lockout_policy.py  default_login_policy.py  default_notification_policy.py  default_password_complexity_policy.py  default_privacy_policy.py  domain.py  domain_policy.py  get_application_oidc.py  get_idp_azure_ad.py  get_idp_github_es.py  get_org_idp_azure_ad.py  get_org_jwt_idp.py  get_trigger_actions.py  human_user.py  idp_azure_ad.py  idp_github.py  idp_github_es.py  idp_gitlab.py  idp_gitlab_self_hosted.py  idp_google.py  idp_ldap.py  instance_member.py  lockout_policy.py  login_policy.py  machine_key.py  machine_user.py  notification_policy.py  org.py  org_idp_azure_ad.py  org_idp_github.py  org_idp_github_es.py  org_idp_gitlab.py  org_idp_gitlab_self_hosted.py  (+18 more)
sdk/python/pulumiverse_zitadel/: README.md  __init__.py  action.py  application_api.py  application_key.py  application_oidc.py  application_saml.py  default_domain_policy.py  default_label_policy.py  default_lockout_policy.py  default_login_policy.py  default_notification_policy.py  default_oidc_settings.py  default_password_complexity_policy.py  default_privacy_policy.py  domain.py  domain_policy.py  get_action.py  get_application_api.py  (+79 more)
(+472 files in other folders)
