[project]
  name = "pulumiverse_zitadel"
  description = "A Pulumi package for creating and managing zitadel cloud resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1"]
  keywords = ["pulumi", "zitadel", "category/cloud"]
  readme = "README.md"
  requires-python = ">=3.7"
  version = "0.0.0a0+dev"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://www.pulumi.com"
    Repository = "https://github.com/pulumiverse/pulumi-zitadel"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumiverse_zitadel = ["py.typed", "pulumi-plugin.json"]
